responsive overflow fixed

--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -10,10 +10,10 @@
     max-width: 100%;
     box-sizing: border-box;
     display: flex;
-    margin-left: 100px;
+    padding-left: 100px;
+    padding-right: 100px;
     padding-top: 32px;
     justify-content: space-between;
-    position: relative;
 }
 
 .about-infos {
@@ -21,7 +21,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 19.2px;
-    max-width: 500px;
+    max-width: 455px;
 
     img {
         height: 32px;
@@ -34,26 +34,26 @@
     font-weight: 700;
     font-size: 90px;
     line-height: 108px;
+    margin-bottom: 18px;
 }
 
 .profile-pic-container {
     position: relative;
-    // padding-right: -40px;
-    margin-right: 8rem;
-    margin-top: 24px;
+    margin-top: 12px;
+    max-width: 455px;
+    padding-right: 32px;
 }
 
 .shadow-photo-bg {
-    width: 40rem;
-    height: 40rem;
-    margin-top: 108px;
-}
 
+    width: 32rem;
+    height: 32rem;
+    margin-top: 175px;
+}
 
 .profile-pic {
     position: absolute;
     top: 114px;
-    right: 64px;
     width: 30rem;
     height: 33rem;
     object-fit: contain;
@@ -62,18 +62,53 @@
 .curved-image {
     position: absolute;
     width: 100vw;
-    height: 270px;
-    bottom: -112px;
+    height: 10rem;
     left: 0;
+    right: 0;
+    bottom: 0;
 }
 
-@media (max-width: 768px) {
+@media(max-width: 1200px) {
+    .about-me {
+        font-size: 60px;
+    }
+
+    .profile-pic-container {
+        padding-right: unset;
+    }
+
+    .profile-pic {
+        width: 24rem;
+        height: 32rem;
+        right: 0;
+    }
+
+    .curved-image {
+        height: 5rem;
+        transform: rotate(-2deg);
+    }
+}
+
+@media (max-width: 975px) {
     .about-container {
         display: flex;
         flex-direction: column-reverse;
+        align-items: center;
         margin-left: unset;
         padding-left: 40px;
         padding-right: 40px;
+    }
+
+    .about-me {
+        font-size: 50px;
+        margin-bottom: unset;
+        margin-top: 20px;
+    }
+
+    .curved-image {
+        bottom: unset;
+        top: 90vh;
+        transform: unset;
     }
 }
 
@@ -95,7 +130,7 @@
     }
 
     .shadow-photo-bg {
-        width: 22rem;
+        width: 18rem;
         height: 24rem;
         margin-top: 14px;
     }
@@ -106,15 +141,18 @@
         width: 16rem;
         height: 22rem;
         object-fit: contain;
-        left: 0;    
+        left: 0;
     }
 
     .curved-image {
-        position: absolute;
-        width: 100vw;
         height: 8rem;
         left: 0;
         right: 0;
         top: 56vh;
     }
 }
+
+@media (max-width: 420px) {
+    .curved-image {
+    top: 43vh;
+}}
