--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,37 +1,36 @@
 body {
   margin: 0;
-  padding: 0;
   background-color: #141D2F;
   font-family: 'Poppins';
   font-style: normal;
-  overflow-x: hidden;
+  // overflow-x: hidden;
 }
 
 html {
   scroll-behavior: smooth;
   
-  // Verstecke die Standard-Scrollbar
-  ::-webkit-scrollbar {
-    display: none;
-  }
+  // // Verstecke die Standard-Scrollbar
+  // ::-webkit-scrollbar {
+  //   display: none;
+  // }
 
-  // Zeige die eigene Scrollbar, wenn der Mauszeiger darüber schwebt
-  &:hover {
-    ::-webkit-scrollbar {
-      display: block;
-    }
-  }
+  // // Zeige die eigene Scrollbar, wenn der Mauszeiger darüber schwebt
+  // &:hover {
+  //   ::-webkit-scrollbar {
+  //     display: block;
+  //   }
+  // }
 
-  // Stilisiere die eigene Scrollbar
-  ::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-  }
+  // // Stilisiere die eigene Scrollbar
+  // ::-webkit-scrollbar {
+  //   width: 10px;
+  //   height: 10px;
+  // }
 
-  ::-webkit-scrollbar-thumb {
-    background-color: #9747FF;
-    border-radius: 5px;
-  }
+  // ::-webkit-scrollbar-thumb {
+  //   background-color: #9747FF;
+  //   border-radius: 5px;
+  // }
 
 }
 
